Мердж мастера в дев

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>ss</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam voluptas neque, eveniet! Doloribus aut officiis, consequatur architecto neque voluptates facere nihil ad, impedit doloremque veniam eum quis. Accusantium vero aliquid rem aliquam, qui ullam recusandae, minima voluptatibus reiciendis aut error alias nihil quae modi tenetur culpa labore? Tempore dolor, quod?</p>
 
 </body>
 </html>
